--- a/.gitignore
+++ b/.gitignore
@@ -129,12 +129,12 @@ celerybeat.pid
 
 # Environments
 .env
-.venv
+.venv2
 env/
-venv/
+venv2/
 ENV/
 env.bak/
-venv.bak/
+venv2.bak/
 
 # Spyder project settings
 .spyderproject
